# ghdag

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/ghdag/: __init__.py  __main__.py  cleanup.py  cli.py
src/ghdag/dag/: __init__.py  _util.py  engine.py  hooks.py  models.py  parser.py  state.py  watcher.py
src/ghdag/llm/: __init__.py  _config.py  _constants.py  capabilities.py  engines.py
src/ghdag/pipeline/: __init__.py  config.py  llm_pipeline.py  order.py  state.py
src/ghdag/shr/: __init__.py  config.py  daemon.py  github.py  runner.py
src/ghdag/ui/: __init__.py  monitor.py  server.py
src/ghdag/ui/static/: index.html
src/ghdag/workflow/: __init__.py  dispatcher.py  engine.py  github.py  loader.py  schema.py
tests/: test_cleanup.py  test_dispatcher_error.py  test_ghdag_cli.py  test_ghdag_engine.py  test_ghdag_llm.py  test_ghdag_parser.py  test_ghdag_pipeline.py  test_ghdag_shr.py  test_ghdag_state.py  test_ghdag_ui.py  test_ghdag_workflow.py  test_llm_config.py  test_order.py  test_pipeline_status.py
tests/fixtures/: sample-workflow.yml
tests/pipeline/: test_llm_pipeline.py
tests/workflow/: test_engine.py
