[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghdag"
version = "0.7.2"
description = "Generic DAG execution engine extracted from graph-watcher"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["watchdog>=4.0.0", "pyyaml>=6.0"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
ghdag = "ghdag.cli:main"

[project.urls]
Repository = "https://github.com/sumipan/ghdag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
